[gd_scene load_steps=21 format=3 uid="uid://ddqqmy67fhbkl"]

[ext_resource type="Script" path="res://Content/Scenes/Soldier/2D/Soldier.gd" id="1_556pp"]
[ext_resource type="Texture2D" uid="uid://c8dlp7k0hfoqf" path="res://Content/Resources/Visual/2D/Soldier/Body/GreenAndRed.png" id="2_k6ue5"]
[ext_resource type="Texture2D" uid="uid://bl6deytvy1lga" path="res://Content/Resources/Visual/2D/Soldier/Body/BlueCircle.png" id="2_t1nw5"]
[ext_resource type="Texture2D" uid="uid://q2go8wn66dke" path="res://Content/Resources/Visual/2D/Soldier/Face/faceA.png" id="3_st1xn"]
[ext_resource type="Texture2D" uid="uid://txfgqqpqt86o" path="res://Content/Resources/Visual/2D/Soldier/Body/BlueSquare.png" id="3_y5ds1"]
[ext_resource type="Texture2D" uid="uid://boo3atn2kj5du" path="res://Content/Resources/Visual/2D/Soldier/Body/BlueTriangle.png" id="4_0xaak"]
[ext_resource type="Texture2D" uid="uid://b57weqr0qb3js" path="res://Content/Resources/Visual/2D/Icons/Arrows/up.png" id="4_16pbf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_55ay5"]
atlas = ExtResource("2_t1nw5")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e2dq"]
atlas = ExtResource("3_y5ds1")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oklqp"]
atlas = ExtResource("4_0xaak")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vol0"]
atlas = ExtResource("2_k6ue5")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u56d"]
atlas = ExtResource("2_k6ue5")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pppqi"]
atlas = ExtResource("2_k6ue5")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_syff5"]
atlas = ExtResource("2_k6ue5")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2ohp"]
atlas = ExtResource("2_k6ue5")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_opr7i"]
atlas = ExtResource("2_k6ue5")
region = Rect2(160, 80, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_6mc88"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55ay5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e2dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oklqp")
}],
"loop": true,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vol0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u56d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pppqi")
}],
"loop": true,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_syff5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2ohp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opr7i")
}],
"loop": true,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fudre"]
atlas = ExtResource("3_st1xn")
region = Rect2(0, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_y37br"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fudre")
}],
"loop": true,
"name": &"faces",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dpbks"]
radius = 8.0
height = 16.0

[node name="Soldier" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_556pp")

[node name="Body" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_6mc88")
animation = &"blue"

[node name="Face" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_y37br")
animation = &"faces"

[node name="SelectorArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2

[node name="SelectorShape" type="CollisionShape2D" parent="SelectorArea"]
shape = SubResource("CapsuleShape2D_dpbks")
debug_color = Color(0.894118, 0.219608, 0.592157, 0.419608)

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(1.42109e-14, -1.42109e-14)
shape = SubResource("CapsuleShape2D_dpbks")

[node name="TargetArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0

[node name="TargetCollider" type="CollisionPolygon2D" parent="TargetArea"]
position = Vector2(2, -6)
polygon = PackedVector2Array(-2, -17, -12, -13, -7.99999, 2, 4, 2, 8, -13)

[node name="RotationIndicator" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.811765, 0.0784314, 0.0588235, 1)
position = Vector2(0, -1.90735e-06)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_16pbf")
offset = Vector2(0, -40)
